--- a/archived.html
+++ b/archived.html
@@ -218,10 +218,10 @@
 					<article>
 						<header>
 							<h2><a href="Reflection-PLC-Training-NAIT.html">Reflecting on PLC Training at NAIT: Earning
-									my credentials of PLC Ladder Logic Programming and PLC Advanced Programming.</a>
-							</h2>
-							<p>TAGS: electronics; automation; industrial; PLC;
-							</p>
+									my credentials of PLC Ladder Logic
+									Programming and PLC Advanced Programming.</a></h2>
+							<p>TAGS: electronics; automation; industrial; PLC; Allen Bradley MicroLogix, CompactLogix,
+								ControlLogix; Ladder; Function Block; Sequential Function Diagram; Structured Text</p>
 						</header>
 						<h3>Why I Did This</h3>
 						<p>
@@ -236,11 +236,18 @@
 							where I learned to program in the different IEC 61131-3 languages (Ladder Logic, Function
 							Block Diagram, Structured Text, Sequential Function Chart,
 							but not Instruction List as lots of companies consider it too archaic). I also learned to
-							program Allen Bradley CompactLogix PLCs using the RSLogix 500 and Studio 5000 software.
+							program Allen Bradley MicroLogix 1100 controllers using RSLogix 500 software; and then
+							CompactLogix 1769-L24ER controllers and 1756-L71 ControlLogix Logix5571
+							controllers using Studio 5000 Logix Designer.<br>
+							We also did some short programming/training on a microsystems SCADAPack32 remote terminal
+							unit (RTU) when we were
+							learning of
+							different communications protocol/methods, but these were slower systems so the training was
+							minimally covered.
 
 						</p>
 						<span class="image featured"><img
-								src="articleAssets/Reflection-PLC-Training-NAIT/CompactLogix.png" alt="" /></span>
+								src="articleAssets/Reflection-PLC-Training-NAIT/compactlogix2.jpg" alt="" /></span>
 					</article>
 
 					<!-- Article//// -->
