--- a/automation.html
+++ b/automation.html
@@ -71,6 +71,44 @@
 					</header>
 
 					<!-- ///////////////////////////////////////////////////////////////////////////////////////// -->
+
+
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="SCADA-Experience-FUXA.html">Testing FUXA, open source SCADA software with:
+									Modbus communications, HMI drawings,
+									SQLite database and trend charts, Alarm tracking; testing on two PLCs</a></h2>
+							<p>TAGS: electronics; soldering; automation; industrial; PLC; OpenPLC; Arduino Uno and Nano;
+								Canaduino PLC 100; raspberry pi; Modbus; SCADA; FUXA; HMI; alarms; historian; charts;
+								SQLite
+							</p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>
+							In my pursuit of industrial automation knowledge, I wanted to see what open source SCADA
+							software was suitable for learning, practicing, and using with my previous automation setups
+							(PLCs). SCADA is 'Supervisory Control And Data Acquisition', and it's software that
+							acts to oversee multiple PLCs, DCSs, RTUs, by: giving visual representations of the plants
+							(Human Machine
+							Interface, HMI) that can also be used to send control commands, collect alarms, capture
+							all tag data into databases (like SQLite) and retrieve that data into a time-series chart
+							(historian), and creating scripts for producing new conditions and actions from combined PLC
+							conditions (like PLC1 can affect PLC2, or, PLC1 and PLC2 at specific conditions can together
+							cause a new state); this all together increases the overall power a user can have with
+							multiple automation systems, therefore, it is a valuable tool to learn.
+
+						</p>
+						<span class="image featured"><img src="articleAssets\SCADA-Experience-FUXA\fuxa_scada_demo.png"
+								alt="" /></span>
+					</article>
+
+
 					<!-- Article//// -->
 					<!-- CTA -->
 					<section id="cta" class="wrapper style3">
@@ -99,13 +137,12 @@
 							onboard LEDs for digital state notification; and 5V and 10V supply lines.<br>
 							More importantly, it can be programmed with free Arduino IDE or the free OpenPLC editor and
 							runtime.<br>
-							In this video I showcase the board demonstrating its power with a makeshift 'water heater
+							In this video, I showcase the board demonstrating its power with a makeshift 'water heater
 							and humidifer plant'. </p>
 						<span class="image featured"><img
 								src="articleAssets/OpenPLC-CanaduinoPLC100/canaduinoplc100_waterheaterhumidifier.png"
 								alt="" /></span>
 					</article>
-
 
 
 					<!-- Article//// -->
