--- a/Remotely-Accessing-Servers-SSH.html
+++ b/Remotely-Accessing-Servers-SSH.html
@@ -21,7 +21,7 @@
 		<div id="header">
 
 			<!-- Logo -->
-			<h1><a href="index.html" id="logo">Brandon Hoynick <em>CV Profile</em></a></h1>
+			<h1><a href="index.html" id="logo">Brandon Hoynick <em>- CV Profile</em></a></h1>
 
 			<!-- Nav -->
 			<nav id="nav">
