--- a/Testing-OpenPLC-Devices.html
+++ b/Testing-OpenPLC-Devices.html
@@ -20,7 +20,7 @@
 		<div id="header">
 
 			<!-- Logo -->
-			<h1><a href="index.html" id="logo">Brandon Hoynick <em> CV Profile</em></a></h1>
+			<h1><a href="index.html" id="logo">Brandon Hoynick <em>- CV Profile</em></a></h1>
 
 			<!-- Nav -->
 			<nav id="nav">
