--- a/Access-Point-Web-Server-Esp8266-Control-Lights.html
+++ b/Access-Point-Web-Server-Esp8266-Control-Lights.html
@@ -53,7 +53,8 @@
 							passerby stranger could change the flickering mode of the lights).
 						</p>
 
-						<span class="image featured"><img
+						<span class="image featured">
+							<img
 								src="articleAssets\Access-Point-Web-Server-Esp8266-Control-Lights\Esp8266-Control-Lights_4.jpg"
 								alt="" /></span>
 						<div class="center">
