--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
       </nav>
     </div>
 
+    <section class="wrapper style1">
+      <div class="container">
+        <div class="row gtr-200">
+              <h3><a href="https://cvprofile-website-vite.pages.dev/" target="_blank" rel="noopener noreferrer">New website version here!</a></h3>
+
+        </div>
+      </div>
+    </section>
         <!-- Main pages (since mobile puts them in hamburger menu, this set of links is more open) -->
         <section class="wrapper style1">
           <div class="container">
