--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="wrapper style1">
       <div class="container">
         <div class="row gtr-200">
-              <h3><a href="https://cvprofile-website-vite.pages.dev/" target="_blank" rel="noopener noreferrer">New website version being developed, check it out here!</a></h3>
+              <h3><a href="https://cvprofile-website-vite.pages.dev/" target="_blank" rel="noopener noreferrer">New website version being developed, check it out here! (FYI: there's lots of typos/mistakes, and broken articles/links.)</a></h3>
 
         </div>
       </div>
