--- a/SCADA-Experience-FUXA.html
+++ b/SCADA-Experience-FUXA.html
@@ -68,7 +68,7 @@
 							multiple automation systems, therefore, it is a valuable tool to learn.
 						</p>
 
-						<span class="image featured"><img src="articleAssets\SCADA-Experience-FUXA\scadahierarchy.png"
+						<span class="image featured"><img src="articleAssets\SCADA-Experience-FUXA\fuxa_scada_demo_1.png"
 								alt="" /></span>
 						<div class="center">
 							<p><i>The generic SCADA experience is at a supervisory level above the PLCs and field
