--- a/featured.html
+++ b/featured.html
@@ -101,7 +101,7 @@
 							multiple automation systems, therefore, it is a valuable tool to learn.
 
 						</p>
-						<span class="image featured"><img src="articleAssets\SCADA-Experience-FUXA\fuxa_scada_demo.png"
+						<span class="image featured"><img src="articleAssets\SCADA-Experience-FUXA\fuxa_scada_demo_2.png"
 								alt="" /></span>
 					</article>
 
