--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li> -->
-                <li ><a href="featured.html">Featured</a></li>
-                <li><a href="automation.html">Automation</a></li>
-                <li><a href="gamedev.html">Game Development</a></li>
-                <li><a href="archived.html">Archived</a></li>
+          <li><a href="featured.html">Featured</a></li>
+          <li><a href="automation.html">Automation</a></li>
+          <li><a href="gamedev.html">Game Development</a></li>
+          <li><a href="archived.html">Archived</a></li>
         </ul>
       </nav>
     </div>
@@ -58,66 +58,88 @@
     <section class="wrapper style1">
       <div class="container">
         <div class="row gtr-200">
-              <h3><a href="https://cvprofile-website-vite.pages.dev/" target="_blank" rel="noopener noreferrer">New website version being developed, check it out here! (FYI: there's lots of typos/mistakes, and broken articles/links.)</a></h3>
-
+          <h3><a href="https://cvprofile-website-vite.pages.dev/" target="_blank" rel="noopener noreferrer">New website
+              version being developed, check it out here! (FYI: there's lots of typos/mistakes, and broken
+              articles/links.)</a></h3>
         </div>
       </div>
     </section>
-        <!-- Main pages (since mobile puts them in hamburger menu, this set of links is more open) -->
-        <section class="wrapper style1">
-          <div class="container">
-            <div class="row gtr-200">
-              <section class="col-4 col-12-narrower">
-                <div class="box highlight">
-                  <i class="icon solid major fa-home"></i>
-                  <h3>Home Page</a></h3>
-                  <p>Let's go to the start page. <br> </p>
-                </div>
-              </section>
-              <section class="col-4 col-12-narrower">
-                <div class="box highlight">
-                  <i class="icon solid major fa-star"></i>
-                  <h3><a href="featured.html">Featured Articles</a></h3>
-                  <p>Let's see what I've experienced lately. <br> </p>
-                </div>
-              </section>
-              <section class="col-4 col-12-narrower">
-                <div class="box highlight">
-                  <i class="icon solid major fa-warehouse"></i>
-                  <h3><a href="archived.html">Archived Articles</a></h3>
-                  <p>Let's see ALL of what I've experienced. <br> </p>
-                </div>
-              </section>
+
+
+
+    <section class="wrapper style1">
+      <div class="container">
+        <h2>For fast reviewing, I have placed quick links of Resume experiences below:</h2>
+        <p><a href="Unity-UAlberta-AR-App-Dev.html" target="_blank" rel="noopener noreferrer">
+            Unity 3D Experience Designer – UAlberta AR App</a></p>
+        <p><a href="SCADA-Experience-FUXA.html" target="_blank" rel="noopener noreferrer">
+            SCADA, HMI and PLC Build with Embedded Systems</a></p>
+        <p><a href="Arduino-Indoor-Garden-Box-with-Data-Logger.html" target="_blank" rel="noopener noreferrer">
+          Arduino Garden Box with Data Logger</a></p>
+        <p><a href="https://www.essualberta.ca/studentgroups/red" target="_blank" rel="noopener noreferrer">
+          Renewable Energy Design (RED) – UAlberta Engineering Club</a></p>
+        <p><a href="https://redclubualberta.pages.dev/" target="_blank" rel="noopener noreferrer">
+          Club Showcasing Website, Built with React Frontend and Quarkly,
+          (redclubualberta.pages.dev)</a></p>
+      </div>
+    </section>
+
+    <!-- Main pages (since mobile puts them in hamburger menu, this set of links is more open) -->
+    <section class="wrapper style1">
+      <div class="container">
+        <div class="row gtr-200">
+          <section class="col-4 col-12-narrower">
+            <div class="box highlight">
+              <i class="icon solid major fa-home"></i>
+              <h3>Home Page</a></h3>
+              <p>Let's go to the start page. <br> </p>
             </div>
-          </div>
-        </section>
-        <section class="wrapper style1">
-          <div class="container">
-            <div class="row gtr-200">
-              <section class="col-4 col-12-narrower">
-                <div class="box highlight">
-                  <i class="icon solid major fa-viruses"></i>
-                  <h3><a href="automation.html">Automation</a></h3>
-                  <p>Let's see what I've experienced with automation (Industrial; Operational Technology; PLC; SCADA). <br> </p>
-                </div>
-              </section>
-              <section class="col-4 col-12-narrower">
-                <div class="box highlight">
-                  <i class="icon solid major fa-gamepad"></i>
-                  <h3><a href="gamedev.html">Game Development</a></h3>
-                  <p>Let's see my experiences in game development. <br> </p>
-                </div>
-              </section>
-              <!-- <section class="col-4 col-12-narrower">
+          </section>
+          <section class="col-4 col-12-narrower">
+            <div class="box highlight">
+              <i class="icon solid major fa-star"></i>
+              <h3><a href="featured.html">Featured Articles</a></h3>
+              <p>Let's see what I've experienced lately. <br> </p>
+            </div>
+          </section>
+          <section class="col-4 col-12-narrower">
+            <div class="box highlight">
+              <i class="icon solid major fa-warehouse"></i>
+              <h3><a href="archived.html">Archived Articles</a></h3>
+              <p>Let's see ALL of what I've experienced. <br> </p>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
+    <section class="wrapper style1">
+      <div class="container">
+        <div class="row gtr-200">
+          <section class="col-4 col-12-narrower">
+            <div class="box highlight">
+              <i class="icon solid major fa-viruses"></i>
+              <h3><a href="automation.html">Automation</a></h3>
+              <p>Let's see what I've experienced with automation (Industrial; Operational Technology; PLC; SCADA). <br>
+              </p>
+            </div>
+          </section>
+          <section class="col-4 col-12-narrower">
+            <div class="box highlight">
+              <i class="icon solid major fa-gamepad"></i>
+              <h3><a href="gamedev.html">Game Development</a></h3>
+              <p>Let's see my experiences in game development. <br> </p>
+            </div>
+          </section>
+          <!-- <section class="col-4 col-12-narrower">
                 <div class="box highlight">
                   <i class="icon solid major fa-leaf"></i>
                   <h3><a href="sustainability.html">Renewables and Sustainability</a></h3>
                   <p>Let's see my experiences with concepts around renewables and sustainability. <br> </p>
                 </div>
               </section> -->
-            </div>
-          </div>
-        </section>
+        </div>
+      </div>
+    </section>
 
     <!-- Gigantic Heading -->
     <section class="wrapper style2">
@@ -176,7 +198,8 @@
           - Safety equipment (PPE usage is important, and typical usage is hard set into my mind from doing my
           previous industrial work; this includes eyewear, ear protection, hard toe footwear, job specific gloves,
           hardhats, respiratory protection, clothing guards, etc.).<br>
-          - Industrial management systems (like ExxonMobil's Operations Integrity Management System) and their encompassing values (like information protocols, safety protocols).<br>
+          - Industrial management systems (like ExxonMobil's Operations Integrity Management System) and their
+          encompassing values (like information protocols, safety protocols).<br>
           - 3D printers (Prusa MK3S; Big Builder).<br>
           - 3D modeling (previously SolidWorks, now Fusion360).<br>
           - Windows computers (I am most familiar with their operating systems as I’ve been using them most of my
